docker compose code refector

--- a/vhost.conf
+++ b/vhost.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:81>
     DocumentRoot /var/www/html/src
 
-    <Directory "/var/www/html/src">
+    <Directory "/var/www/html">
         AllowOverride all
         Require all granted
     </Directory>
